# plexus-zelij

./: .gitignore  CAST-9-SUMMARY.md  Cargo.toml  Dockerfile  README.md  WEB-VIEWER.md  plexus_locus.config.json  rustfmt.toml  synapse.config.json  verify-cast-9.sh
.cargo/: config.toml
.hyperforge/: config.toml
client/: .codegen-metadata.json  App.vue  bun.lockb  client.ts  index.html  ir.json  package.json  rpc.ts  server.ts  tsconfig.json
client-old/: README.md  index-old.html  index.ts  locus-client.js  transport.ts  types.ts
client-old/info/: client.ts
client-old/panes/: index.ts
client-old/recording/: types.ts
client-old/render/: types.ts
client-old/sessions/: index.ts
client-old/tabs/: client.ts  index.ts  types.ts
client-old/test/: smoke.test.ts
client-old/workspace/: index.ts
client/info/: index.ts
client/panes/: client.ts  types.ts
client/recording/: client.ts  index.ts
client/render/: client.ts  index.ts
client/sessions/: client.ts
client/workspace/: client.ts
docs/: CAST-9-implementation.md
examples/: composite_writer_demo.rs
plans/CAST/: CAST-0-notes.md  CAST-1.md  CAST-10.md  CAST-2.md  CAST-3.md  CAST-4.md  CAST-5.md  CAST-6.md  CAST-7.md  CAST-8.md  CAST-9.md
src/: activation.rs  backend.rs  lib.rs  main.rs  scripting.rs  types.rs
src/activations/: info.rs  mod.rs  observation.rs  panes.rs  recording.rs  render.rs  sessions.rs  tabs.rs  workspace.rs
src/backends/: mod.rs  tmux.rs  zellij.rs
src/cast/: mod.rs
src/compositor/: diff.rs  frame.rs  mod.rs  pane_state.rs  writer.rs
src/observation/: mod.rs  terminal_state.rs
src/recording/: engine.rs  layout.rs  lifecycle.rs  mod.rs
src/web/: index.html
templates/: container-dev.rhai
tests/: compositor_integration.rs  debug_recording.rs  demo_recording.rs  live_demo_recording.rs  manual_end_to_end.rs  render_activation_integration.rs
