[package]
name = "plexus-locus"
version = "0.1.0"
edition = "2021"
description = "Terminal workspace orchestration — standalone Plexus RPC server"
license = "AGPL-3.0-only"
default-run = "plexus-locus"

[lib]
name = "plexus_locus"
path = "src/lib.rs"

[[bin]]
name = "plexus-locus"
path = "src/main.rs"

[dependencies]
# Core Plexus RPC
plexus-macros = "0.3"
plexus-core = "0.3"
plexus-transport = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full", "process"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization & Schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["derive", "uuid1"] }

# JSON-RPC
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# Core types
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[patch.crates-io]
plexus-core = { path = "../plexus-core" }
plexus-macros = { path = "../plexus-macros" }
plexus-transport = { path = "../plexus-transport" }
