[package]
name = "plexus-locus"
version = "0.1.0"
edition = "2021"
description = "Terminal workspace orchestration — standalone Plexus RPC server"
license = "AGPL-3.0-only"
repository = "https://github.com/hyperforgelabs/plexus-zelij"
keywords = ["terminal", "tmux", "rpc", "automation", "recording"]
categories = ["development-tools", "command-line-utilities"]
default-run = "plexus-locus"

[lib]
name = "plexus_locus"
path = "src/lib.rs"

[[bin]]
name = "plexus-locus"
path = "src/main.rs"

[dependencies]
# Core Plexus RPC
plexus-macros = "0.3"
plexus-core = "0.3"
plexus-transport = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full", "process"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization & Schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["derive", "uuid1"] }

# JSON-RPC
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# Core types
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
tmux_interface = "0.4"
vt100 = "0.15"
ratatui = { version = "0.29", default-features = false }
rhai = { version = "1.20", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
# missing_docs = "warn"  # Disabled due to plexus_macros generating undocumentable code
unused_must_use = "deny"

[lints.clippy]
# Pedantic lints
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints (strictest)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

# Cargo lints
cargo = { level = "warn", priority = -1 }

# Correctness (deny)
correctness = { level = "deny", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Style preferences
redundant_field_names = "warn"
redundant_static_lifetimes = "warn"
unnecessary_wraps = "warn"
used_underscore_binding = "allow"

# Allow some pedantic lints that can be too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
must_use_candidate = "allow"
float_cmp = "allow"
# Allow unwrap/expect/panic in tests and examples
#unwrap_used = "allow"  # Keep this as warn - important for production code
#expect_used = "allow"  # Keep this as warn
#panic = "allow"        # Keep this as warn

